<?xml version="1.0"?>
<package format="2">
  <name>cr_cw2_gaze_based_prediction</name>
  <version>0.0.0</version>
  <description>The cr_cw2_gaze_based_prediction package</description>
  <maintainer email="n.f.holmes@se22.qmul.ac.uk">Nikolaus Holmes</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bayesian_belief_network</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>bayesian_belief_network</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>bayesian_belief_network</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
